

2018-11-24 Franz Holzinger  <franz@ttproducts.de>
    * Readd file class.tx_agency.php which is needed until TYPO3 7.6 for addPItoST43.

2018-11-13 Franz Holzinger  <franz@ttproducts.de>
    * Fix PHP syntax error

2018-09-25 Franz Holzinger  <franz@ttproducts.de>
    * Please help to fix the wrong translation at: https://translation.typo3.org/de/TYPO3.ext.agency/translate/pi/locallang.xlf#filter=all&unit=4571234 .
    * bugfix for notification emails: The storage page of the plugin has not been considered.
    * feature responsive template: replace several HTML tags by div tags with css classes.

2018-09-05 Franz Holzinger  <franz@ttproducts.de>
    * modify composer.json: use namespace typo3-ter/div2007 instead of jambagecom/div2007

2018-07-18 Franz Holzinger  <franz@ttproducts.de>
    * remove the old template file template/tx_agency_css_tmpl.html. Use the new template file at Resources/Private/Templates/AgencyRegistrationTemplate.html instead of it.

2018-07-12 Franz Holzinger  <franz@ttproducts.de>
    * bugfix for TYPO3 8.7: replace the deprecated $GLOBALS['TSFE']->sys_page->getRecordsByField by  \TYPO3\CMS\Frontend\Page\PageRepository::getRecordsByField

2018-07-12 Franz Holzinger  <franz@ttproducts.de>
    * remove the files:
        ext_autoload.php, hooks/captcha/class.tx_agency_captcha.php, hooks/class.tx_agency_feusergroup_scheduler.php, hooks/class.tx_agency_hooksHandler.php,
        hooks/class.tx_agency_hooks_cms.php, hooks/freecap/class.tx_agency_freecap.php, 
        hooks/statusreport/class.tx_agency_statusReport.php, hooks/statusreport/ext_localconf.php,
        hooks/statusreport/locallang.xlf

2018-06-18 Franz Holzinger  <franz@ttproducts.de>
    * change the language labels from XTHML to HTML format. <br /> will become <br>.

2018-06-16 Franz Holzinger  <franz@ttproducts.de>
    * change in compatibility: TYPO3 6.2 is the minimum requirement.
    * better error handling for Setfixed