@@ -1,9 +1,5 @@
 <?php
-
-if (!defined ('TYPO3_MODE')) {
-    die ('Access denied.');
-}
-
+defined('TYPO3_MODE') or die('Access denied.');
 
 $table = 'fe_users';
 
